--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <div class="about_data">
          <p class="about_description">I am Khushi. I am currently pursuing engineering from RGPV university . I am constantly exploring new technologies and frameworks to improve development skills.As a Backend developer, I specialize in building the server-side logic and infrastructure that powers web applications handle complex data processing, ensuring seamless functionality and robust performance. With a deep understanding of programming languages like Node.js, I create innovative software solutions that optimize efficiency, and enhance user experiences.I am also passionate to improve my logical thinking by solve problems</p>
          <div class="about_buttons">
-            <a download= "Khushi Verma  - Resume 2.0.pdf" href="" class="button button-flex">
+            <a download= "Khushi Verma  - Resume 2.0.pdf" href="assets/Khushi Verma  - Resume 2.0.pdf" class="button button-flex">
                Download CV<i class="uil uil-download-alt button_icon"></i>
             </a>
          </div>   
